force-app/main/default/objects/Demo_Product__c/Demo_Product__c.object-meta.xml
<CustomObject>
    <description>The Products included in the Demo (Trialforce Template)</description>
    <label>Demo Product</label>
    <nameField>
        <label>Demo Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>