force-app/main/default/objects/Demo_Product__c/fields/Demo_Template__c.field-meta.xml
<CustomField>
    <fullName>Demo_Template__c</fullName>
    <label>Demo Template</label>
    <referenceTo>Demo_Template__c</referenceTo>
    <relationshipLabel>Demo Products</relationshipLabel>
    <relationshipName>Demo_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>