force-app/main/default/objects/Demo_Product__c/fields/Include_on_All_Demos__c.field-meta.xml
<CustomField>
    <fullName>Include_on_All_Demos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include on All Demos</label>
    <type>Checkbox</type>
</CustomField>