force-app/main/default/objects/Demo_Product__c/fields/Instructions_Doc__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Doc__c</fullName>
    <label>Instructions Doc</label>
    <type>Url</type>
</CustomField>