force-app/main/default/objects/Demo_Product__c/fields/ISV_Instructions__c.field-meta.xml
<CustomField>
    <fullName>ISV_Instructions__c</fullName>
    <label>ISV Instructions</label>
    <type>Url</type>
</CustomField>